--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,14 @@
      "output_type": "stream",
      "text": [
       "Variable containing:\n",
-      "-5.0202e-01 -5.6666e-01 -2.2567e-01  ...  -1.1091e+00 -6.4457e-01 -7.3276e-01\n",
-      "-9.2222e-01 -1.0435e+00 -7.8610e-01  ...  -1.0050e+00 -6.4457e-01 -7.3276e-01\n",
-      "-6.5019e-01 -7.1351e-01 -3.9780e-01  ...  -6.1540e-01 -5.2920e-03 -7.2061e-01\n",
+      "-6.7539e-01 -7.5360e-01 -3.5450e-01  ...  -1.3204e+00 -7.0299e-01 -8.1626e-01\n",
+      "-1.1062e+00 -1.2471e+00 -9.1324e-01  ...  -1.2132e+00 -7.0299e-01 -8.1626e-01\n",
+      "-8.2730e-01 -9.0558e-01 -5.2611e-01  ...  -8.1215e-01 -8.3405e-02 -8.0451e-01\n",
       "                ...                   ⋱                   ...                \n",
-      "-1.0848e+00 -1.1180e+00 -9.6540e-01  ...  -1.1091e+00 -6.4457e-01 -7.3276e-01\n",
-      "-1.0682e+00 -1.1071e+00 -9.4798e-01  ...  -1.1091e+00 -6.4457e-01 -7.3276e-01\n",
-      "-1.0627e+00 -1.1071e+00 -9.6438e-01  ...  -1.1091e+00 -6.4457e-01 -7.3276e-01\n",
-      "[torch.FloatTensor of size 1208x26]\n",
+      " 1.3177e-01  5.2449e-01 -1.0833e-01  ...  -3.6646e-01 -8.3405e-02 -5.1443e-01\n",
+      " 6.2832e-01  9.8197e-01  5.5051e-01  ...  -5.2544e-01  1.1558e+00  4.7543e-01\n",
+      "-4.9344e-01 -2.0571e-01 -5.7922e-01  ...  -4.5317e-01 -8.3405e-02 -5.9276e-01\n",
+      "[torch.FloatTensor of size 1040x26]\n",
       " \n",
       "\n",
       "Variable containing:\n",
@@ -25,25 +25,30 @@
       " 1\n",
       " 1\n",
       "⋮ \n",
-      " 1\n",
-      " 1\n",
-      " 1\n",
-      "[torch.LongTensor of size 1208]\n",
+      " 0\n",
+      " 0\n",
+      " 0\n",
+      "[torch.LongTensor of size 1040]\n",
       "\n",
-      "Net(\n",
-      "  (hidden): Linear(in_features=26, out_features=1000, bias=True)\n",
-      "  (out): Linear(in_features=1000, out_features=2, bias=True)\n",
+      "Sequential(\n",
+      "  (0): Linear(in_features=26, out_features=200, bias=True)\n",
+      "  (1): Dropout(p=0.3)\n",
+      "  (2): ReLU()\n",
+      "  (3): Linear(in_features=200, out_features=200, bias=True)\n",
+      "  (4): Dropout(p=0.3)\n",
+      "  (5): ReLU()\n",
+      "  (6): Linear(in_features=200, out_features=2, bias=True)\n",
       ")\n",
       "Accuracy=0.49\n",
-      "Accuracy=0.82\n",
+      "Accuracy=0.71\n",
+      "Accuracy=0.79\n",
+      "Accuracy=0.84\n",
       "Accuracy=0.86\n",
-      "Accuracy=0.98\n",
-      "Accuracy=0.95\n",
-      "Accuracy=1.00\n",
-      "Accuracy=1.00\n",
-      "Accuracy=1.00\n",
-      "Accuracy=1.00\n",
-      "Accuracy=1.00\n"
+      "Accuracy=0.89\n",
+      "Accuracy=0.90\n",
+      "Accuracy=0.90\n",
+      "Accuracy=0.91\n",
+      "Accuracy=0.94\n"
      ]
     },
     {
@@ -52,7 +57,7 @@
        "\"\\nprint('this is my x     ',x,'this is my y       ',y )\\n\\nprint(test_data)\\nprint('this is my second data')\\nprint('this is my shape',test_data.shape)\\nprint('this is my shape',train_data.shape)\\nprint('this is my target x data     ',x_target.shape,'   this is my target y data',y_target.shape)\\nprint('\\n')\\nprint(train_data)\\nprint('\\n')\\n\\ny0 = torch.zeros(100)   \\nprint(y0)\\n\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,8 +86,11 @@
     "train_data=np.delete(train_data,0,1)\n",
     "test_data=np.delete(test_data,0,1)\n",
     "\n",
-    "x,y=np.concatenate((train_data,test_data),axis=0),np.concatenate((x_target,y_target),axis=0)\n",
-    "x=scale(x)\n",
+    "#x,y=np.concatenate((train_data,test_data),axis=0),np.concatenate((x_target,y_target),axis=0)\n",
+    "x=train_data\n",
+    "y=x_target\n",
+    "\n",
+    "x,test_data=scale(x),scale(test_data)\n",
     "\n",
     "\n",
     "\n",
@@ -94,14 +102,17 @@
     "print(y)\n",
     "\n",
     "\n",
-    "'''\n",
+    "\n",
     "net = torch.nn.Sequential(\n",
     "    torch.nn.Linear(26, N_HIDDEN),\n",
-    "    torch.nn.Dropout(0.5),  # drop 50% of the neuron\n",
+    "    torch.nn.Dropout(0.3),  # drop 50% of the neuron\n",
+    "    torch.nn.ReLU(),    \n",
+    "    torch.nn.Linear(N_HIDDEN, N_HIDDEN),\n",
+    "    torch.nn.Dropout(0.3),  # drop 50% of the neuron\n",
     "    torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(N_HIDDEN, 1),\n",
+    "    torch.nn.Linear(N_HIDDEN, 2),\n",
     ")\n",
-    "\n",
+    "'''\n",
     "class Net(torch.nn.Module):\n",
     "    def __init__(self, n_feature, n_hidden, n_output):\n",
     "        super(Net, self).__init__()\n",
@@ -112,7 +123,7 @@
     "        x = F.relu(self.hidden(x))      # activation function for hidden layer\n",
     "        x = self.predict(x)             # linear output\n",
     "        return x\n",
-    "    '''\n",
+    "  \n",
     "class Net(torch.nn.Module):\n",
     "    def __init__(self, n_feature, n_hidden, n_output):\n",
     "        super(Net, self).__init__()\n",
@@ -123,8 +134,7 @@
     "        x = F.relu(self.hidden(x))      # activation function for hidden layer\n",
     "        x = self.out(x)\n",
     "        return x\n",
-    "\n",
-    "net = Net(26, 1000, 2)\n",
+    "  '''\n",
     "\n",
     "\n",
     "print(net)  # net architecture\n",
@@ -142,11 +152,14 @@
     "    optimizer.step()\n",
     "    \n",
     "    if t % 50==0:\n",
+    "        net.eval()\n",
+    "        #test_net=net(test_x)\n",
     "        prediction = torch.max(out, 1)[1]\n",
     "        pred_y = prediction.data.numpy().squeeze()\n",
     "        target_y = y.data.numpy()\n",
     "        accuracy = float((pred_y == target_y).astype(int).sum()) / float(target_y.size)\n",
     "        print('Accuracy=%.2f' % accuracy)\n",
+    "        net.train()\n",
     "\n",
     "'''\n",
     "print('this is my x     ',x,'this is my y       ',y )\n",
